--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Hunter Chang",
   "dependencies": {
     "gatsby": "^1.9.118",
+    "gatsby-cli": "^2.4.8",
     "gatsby-image": "^1.0.27",
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-google-analytics": "^1.0.12",
