--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^1.9.118",
-    "gatsby-cli": "^2.4.8",
-    "gatsby-image": "^1.0.27",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-google-analytics": "^1.0.12",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.14",
-    "gatsby-plugin-sharp": "^1.6.21",
-    "gatsby-remark-copy-linked-files": "^1.5.9",
-    "gatsby-remark-images": "^1.5.33",
-    "gatsby-source-filesystem": "^1.5.8",
-    "gatsby-transformer-remark": "^1.7.21",
-    "gatsby-transformer-sharp": "^1.6.14",
-    "lodash": "^4.17.4",
-    "react-google-maps": "^9.4.3"
+    "gatsby": "^2.7.3",
+    "gatsby-cli": "^2.6.2",
+    "gatsby-image": "^2.1.1",
+    "gatsby-link": "^2.1.1",
+    "gatsby-plugin-google-analytics": "^2.0.20",
+    "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.1.1",
+    "gatsby-remark-copy-linked-files": "^2.0.12",
+    "gatsby-remark-images": "^3.0.13",
+    "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-transformer-remark": "^2.3.12",
+    "gatsby-transformer-sharp": "^2.1.19",
+    "lodash": "^4.17.11",
+    "react-google-maps": "^9.4.5"
   },
   "homepage": "https://github.com/ChangoMan/gatsby-starter-dimension",
   "keywords": [
@@ -40,6 +41,9 @@
     "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "babel-preset-react": "^6.24.1",
+    "gh-pages": "^2.0.1",
+    "node-sass": "^4.12.0",
+    "react-helmet": "^5.2.1"
   }
 }
