--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^2.7.3",
-    "gatsby-cli": "^2.6.2",
-    "gatsby-image": "^2.1.1",
-    "gatsby-link": "^2.1.1",
-    "gatsby-plugin-netlify": "^2.0.17",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.1.1",
-    "gatsby-remark-copy-linked-files": "^2.0.12",
-    "gatsby-remark-images": "^3.0.13",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby": "^2.11.5",
+    "gatsby-cli": "^2.7.7",
+    "gatsby-image": "^2.2.3",
+    "gatsby-link": "^2.2.0",
+    "gatsby-plugin-netlify": "^2.1.0",
+    "gatsby-plugin-preact": "^3.1.2",
+    "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sass": "^2.1.0",
+    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-images": "^3.1.2",
+    "gatsby-source-filesystem": "^2.1.1",
+    "gatsby-transformer-remark": "^2.5.0",
+    "gatsby-transformer-sharp": "^2.2.0",
     "lodash": "^4.17.11",
     "react-google-maps": "^9.4.5"
   },
@@ -41,9 +42,12 @@
   },
   "devDependencies": {
     "babel-preset-react": "^6.24.1",
-    "gatsby-plugin-google-analytics": "^2.0.20",
+    "gatsby-plugin-google-analytics": "^2.1.1",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
+    "preact": "^10.0.0-beta.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1"
   }
 }
