--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^2.15.24",
-    "gatsby-cli": "^2.7.50",
+    "babel-preset-gatsby": "^1.0.0",
+    "gatsby": "^3.0.3",
+    "gatsby-cli": "^3.0.0",
     "gatsby-image": "^2.2.21",
-    "gatsby-link": "^2.2.15",
-    "gatsby-plugin-netlify": "^2.1.15",
-    "gatsby-plugin-preact": "^3.1.11",
-    "gatsby-plugin-react-helmet": "^3.1.8",
-    "gatsby-plugin-sass": "^2.1.15",
-    "gatsby-plugin-sharp": "^2.2.25",
-    "gatsby-remark-copy-linked-files": "^2.1.21",
-    "gatsby-remark-images": "^3.1.23",
-    "gatsby-source-filesystem": "^2.1.26",
-    "gatsby-transformer-remark": "^2.6.24",
-    "gatsby-transformer-sharp": "^2.2.17",
-    "lodash": "^4.17.15",
+    "gatsby-link": "^3.0.1",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-netlify": "^3.0.0",
+    "gatsby-plugin-preact": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sass": "^4.0.2",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "lodash": "^4.17.21",
     "react-google-maps": "^9.4.5"
   },
   "homepage": "https://github.com/ChangoMan/gatsby-starter-dimension",
@@ -42,12 +44,13 @@
   },
   "devDependencies": {
     "babel-preset-react": "^6.24.1",
-    "gatsby-plugin-google-analytics": "^2.1.17",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.12.0",
-    "preact": "^10.0.0-beta.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-source-wordpress": "^5.0.0",
+    "gh-pages": "^3.1.0",
+    "node-sass": "^5.0.0",
+    "preact": "^10.5.12",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   }
 }
