--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "lodash": "^4.17.21",
+    "preact-render-to-string": "^5.1.16",
     "react-google-maps": "^9.4.5"
   },
   "homepage": "https://github.com/ChangoMan/gatsby-starter-dimension",
