--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "babel-preset-gatsby": "^1.13.0",
-    "gatsby": "^3.13.0",
-    "gatsby-cli": "^3.13.0",
+    "babel-preset-gatsby": "^2.5.1",
+    "gatsby": "^4.5.2",
+    "gatsby-cli": "^4.5.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-link": "^3.13.0",
-    "gatsby-plugin-gatsby-cloud": "^3.1.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-netlify": "^3.13.0",
-    "gatsby-plugin-preact": "^5.13.0",
-    "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-sass": "^4.13.0",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-remark-copy-linked-files": "^4.10.0",
-    "gatsby-remark-images": "^5.10.0",
-    "gatsby-source-filesystem": "^3.13.0",
-    "gatsby-transformer-remark": "^4.10.0",
-    "gatsby-transformer-sharp": "^3.13.0",
+    "gatsby-link": "^4.5.0",
+    "gatsby-plugin-gatsby-cloud": "^4.5.1",
+    "gatsby-plugin-image": "^2.5.1",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-preact": "^6.5.0",
+    "gatsby-plugin-react-helmet": "^5.5.0",
+    "gatsby-plugin-sass": "^5.5.0",
+    "gatsby-plugin-sharp": "^4.5.1",
+    "gatsby-remark-copy-linked-files": "^5.5.0",
+    "gatsby-remark-images": "^6.5.1",
+    "gatsby-source-filesystem": "^4.5.1",
+    "gatsby-transformer-remark": "^5.5.1",
+    "gatsby-transformer-sharp": "^4.5.0",
     "lodash": "^4.17.21",
     "preact-render-to-string": "^5.1.19",
     "react-google-maps": "^9.4.5"
@@ -46,13 +46,13 @@
   },
   "devDependencies": {
     "babel-preset-react": "^6.24.1",
-    "gatsby-plugin-google-analytics": "^3.13.0",
-    "gatsby-source-wordpress": "^5.13.0",
+    "gatsby-plugin-google-analytics": "^4.5.0",
+    "gatsby-source-wordpress": "^6.5.1",
     "gh-pages": "^3.2.3",
-    "node-sass": "^6.0.1",
-    "preact": "^10.5.14",
+    "preact": "^10.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.47.0"
   }
 }
