--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "babel-preset-gatsby": "^2.5.1",
-    "gatsby": "^4.5.2",
-    "gatsby-cli": "^4.5.1",
+    "babel-preset-gatsby": "^2.9.1",
+    "gatsby": "^4.9.3",
+    "gatsby-cli": "^4.9.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-link": "^4.5.0",
-    "gatsby-plugin-gatsby-cloud": "^4.5.1",
-    "gatsby-plugin-image": "^2.5.1",
-    "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-preact": "^6.5.0",
-    "gatsby-plugin-react-helmet": "^5.5.0",
-    "gatsby-plugin-sass": "^5.5.0",
-    "gatsby-plugin-sharp": "^4.5.1",
-    "gatsby-remark-copy-linked-files": "^5.5.0",
-    "gatsby-remark-images": "^6.5.1",
-    "gatsby-source-filesystem": "^4.5.1",
-    "gatsby-transformer-remark": "^5.5.1",
-    "gatsby-transformer-sharp": "^4.5.0",
+    "gatsby-link": "^4.9.1",
+    "gatsby-plugin-gatsby-cloud": "^4.9.1",
+    "gatsby-plugin-image": "^2.9.1",
+    "gatsby-plugin-netlify": "^4.1.0",
+    "gatsby-plugin-preact": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-sass": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.1",
+    "gatsby-remark-copy-linked-files": "^5.9.0",
+    "gatsby-remark-images": "^6.9.1",
+    "gatsby-source-datocms": "^3.0.16",
+    "gatsby-source-filesystem": "^4.9.1",
+    "gatsby-transformer-remark": "^5.9.1",
+    "gatsby-transformer-sharp": "^4.9.0",
     "lodash": "^4.17.21",
-    "preact-render-to-string": "^5.1.19",
+    "preact-render-to-string": "^5.1.20",
+    "react-datocms": "^3.0.11",
     "react-google-maps": "^9.4.5"
   },
   "homepage": "https://github.com/ChangoMan/gatsby-starter-dimension",
@@ -46,13 +48,13 @@
   },
   "devDependencies": {
     "babel-preset-react": "^6.24.1",
-    "gatsby-plugin-google-analytics": "^4.5.0",
-    "gatsby-source-wordpress": "^6.5.1",
+    "gatsby-plugin-google-analytics": "^4.9.0",
+    "gatsby-source-wordpress": "^6.9.1",
     "gh-pages": "^3.2.3",
-    "preact": "^10.6.4",
+    "preact": "^10.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "sass": "^1.47.0"
+    "sass": "^1.49.9"
   }
 }
